# echofit

./: LICENSE  Makefile  README.md  pyproject.toml
agn_reverb_mcmc/: README.md  requirements.txt
agn_reverb_mcmc/src/: inference.py  likelihood.py
agn_reverb_mcmc/tests/: test_fourier.py
data/: generate_synthetic.py  optical.csv  uv.csv  xray.csv
notebooks/: demo.ipynb
scratch/: profile_model.py
src/: model.py
src/echofit/: __init__.py  config.py  context.py  disk_kernel.py  disk_kernel_cache.py  echo_cache.py  echo_kernels.py  echofit.py  forward.py  forward_core.py  forward_model.py  fourier.py  fourier_cache.py  inference.py  interp_cache.py  interpolation.py  kernel.py  likelihood.py  linear_algebra.py  linear_solve.py  marginal_woodbury.py  model.py  plotting.py  postprocess.py  predict.py  solve_fourier.py  solve_xray.py
src/echoft/: fourier.py  inference.py  kernel.py  likelihood.py  model.py
tests/: test_kernel.py
