[tool.poetry]
name = "echofit"
version = "0.1.0"
description = "Fourier-domain AGN reverberation mapping with Bayesian inference"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "echofit", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26"
scipy = ">=1.11,<1.13"
jax = "^0.4"
jaxlib = "^0.4"
numpyro = "^0.13"
matplotlib = "^3.8"
arviz = ">=0.16,<0.18"
jaxopt = "^0.8.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ipykernel = "^6.0"
black = "^24.0"
ruff = "^0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88